--- a/exemplo_comparativo.ipynb
+++ b/exemplo_comparativo.ipynb
@@ -42,7 +42,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "Um pequeno exemplo do ganho de desempenho com Numba."
+        "Um pequeno exemplo do ganho de desempenho com Numba. Faremos uma função que realiza a soma de vetores de tamanho considerável "
       ]
     },
     {
@@ -53,9 +53,9 @@
       },
       "cell_type": "code",
       "source": [
+        "from numba import jit\n",
         "import numpy as np\n",
-        "import time\n",
-        "import numba"
+        "import time\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -64,62 +64,75 @@
       "metadata": {
         "id": "Dzy_1gAjsrDx",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "57a13014-7507-47e9-eee7-c1e88bb8cfd9",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "cell_type": "code",
       "source": [
-        ""
+        "# média ponto a ponto com Numpy\n",
+        "\n",
+        "def m1(x):\n",
+        "    return np.array([np.mean(x[:,i]) for i in range(len(x[0])) ])\n",
+        "\n",
+        "t1 = time.time()\n",
+        "\n",
+        "#Criando matrix aleatória 23x921000\n",
+        "x = np.random.rand(23,921000)\n",
+        "m1(x)\n",
+        "\n",
+        "t2 = time.time()\n",
+        "print(\"Tempo de execução com NumPy: \",t2-t1)"
       ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "bzsHaNCosycI",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "## Conceito Iniciais\n",
-        "\n",
-        "**Numba** trata-se de um compilador *just-in-time* para a linguagem Python, o qual usa como base loops, arrays e funções do **NumPy**.\n",
-        "\n",
-        "A sua usabilidade é bem simples e sua curva de aprendizagem pequena, pois para ativar os recursos do **Numba** basta apenas fazer de sua coleção de decoradores que ao serem aplicados em funções vão instruir como o **NUmba** deve compilá-las. A partir disso a função decorada é compilada em código de máquina, fazendo que seja notório o ganho de performace.\n",
-        "\n",
-        "O **Numba** exige os seguitnes pré-requisitos:\n",
-        "\n",
-        "* SO: Windows (32 e 64 bits), OSX e Linux (32 e 64 bits)\n",
-        "* Arquitetura: x86, x86_64, ppc64le. (Em teste: armv7l, armv8l (aarch64)).\n",
-        "* GPUs: Nvidia CUDA. (Em teste: AMD ROC.\n",
-        "CPython)\n",
-        "* NumPy 1.10 ou mais recente."
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Tempo de execução com NumPy:  6.710026264190674\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
       "metadata": {
-        "id": "5BlNOQhHvPWr",
+        "id": "aumhFLRa29FK",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "a27d764c-62c6-4c78-f61e-e1139622ad43",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "cell_type": "code",
       "source": [
-        ""
+        "# média ponto a ponto com Numba\n",
+        "\n",
+        "@jit(nopython=True)\n",
+        "def m1(x):\n",
+        "    return np.array([np.mean(x[:,i]) for i in range(len(x[0])) ])\n",
+        "\n",
+        "t1 = time.time()\n",
+        "#Criando matrix aleatória 23x921000\n",
+        "x = np.random.rand(23,921000)\n",
+        "m1(x)\n",
+        "\n",
+        "t2 = time.time()\n",
+        "print(\"Tempo de execução com Numba: \",t2-t1)"
       ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "dOBDqeoGsf6t",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Tempo de execução com Numba:  0.4282722473144531\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
