--- a/exemplo_comparativo.ipynb
+++ b/exemplo_comparativo.ipynb
@@ -42,7 +42,9 @@
       },
       "cell_type": "markdown",
       "source": [
-        "Um pequeno exemplo do ganho de desempenho com Numba. Faremos uma função que realiza a soma de vetores de tamanho considerável "
+        "Um pequeno exemplo do ganho de desempenho com Numba. \n",
+        "\n",
+        "Faremos uma função que retorna um vetor criado pela média ponto a ponto  de itens de uma matriz 23x921000 com números aleatórios. "
       ]
     },
     {
@@ -64,7 +66,7 @@
       "metadata": {
         "id": "Dzy_1gAjsrDx",
         "colab_type": "code",
-        "outputId": "57a13014-7507-47e9-eee7-c1e88bb8cfd9",
+        "outputId": "34387552-6213-4933-fa30-d1dbc52af6c9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -77,21 +79,21 @@
         "def m1(x):\n",
         "    return np.array([np.mean(x[:,i]) for i in range(len(x[0])) ])\n",
         "\n",
-        "t1 = time.time()\n",
-        "\n",
         "#Criando matrix aleatória 23x921000\n",
         "x = np.random.rand(23,921000)\n",
-        "m1(x)\n",
         "\n",
+        "t1 = time.time()\n",
+        "m1(x)\n",
         "t2 = time.time()\n",
+        "\n",
         "print(\"Tempo de execução com NumPy: \",t2-t1)"
       ],
-      "execution_count": 36,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Tempo de execução com NumPy:  6.710026264190674\n"
+            "Tempo de execução com NumPy:  6.531533718109131\n"
           ],
           "name": "stdout"
         }
@@ -101,7 +103,7 @@
       "metadata": {
         "id": "aumhFLRa29FK",
         "colab_type": "code",
-        "outputId": "a27d764c-62c6-4c78-f61e-e1139622ad43",
+        "outputId": "d5667083-d133-4581-ac99-563c41f693ee",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -115,20 +117,21 @@
         "def m1(x):\n",
         "    return np.array([np.mean(x[:,i]) for i in range(len(x[0])) ])\n",
         "\n",
-        "t1 = time.time()\n",
         "#Criando matrix aleatória 23x921000\n",
         "x = np.random.rand(23,921000)\n",
-        "m1(x)\n",
         "\n",
+        "t1 = time.time()\n",
+        "m1(x)\n",
         "t2 = time.time()\n",
+        "\n",
         "print(\"Tempo de execução com Numba: \",t2-t1)"
       ],
-      "execution_count": 37,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Tempo de execução com Numba:  0.4282722473144531\n"
+            "Tempo de execução com Numba:  0.2841310501098633\n"
           ],
           "name": "stdout"
         }
